[build-system]
requires = ["setuptools>=65.6.3"]
build-backend = "setuptools.build_meta"

[project]
name = "nipype-workbench-extensions"
version = "0.1.0"
description = "connectome workbench interfaces for nipype"
readme = "README.md"
authors = [{ name = "Bogdan Petre", email = 'f0042vm@dartmouth.edu'}]
